--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <nav>
-        <img src="src/img/Logo - Project Furniture Full.png" class="logo" />
+        <img src="src/img/logo.png" class="logo" />
         <div class="nav-link">
           <a href="#">Products</a>
           <a href="#">Features</a>
@@ -29,7 +29,7 @@
           </p>
           <a class="btn btn--big" href="#">Shop chairs</a>
         </div>
-        <img src="/src/img/hero.jpg" alt="Photo" />
+        <img src="src/img/hero.jpg" alt="Photo" />
       </header>
 
       <section>
@@ -67,7 +67,7 @@
 
       <section class="testimonial-section">
         <div class="grid-3-cols">
-          <img src="/src/img/customers.jpg" alt="People sitting on chairs" />
+          <img src="src/img/customers.jpg" alt="People sitting on chairs" />
           <div class="testimonial-box">
             <h2>"We couldn't live without these chairs anymore"</h2>
             <blockquote class="testimonial-text">
@@ -84,7 +84,7 @@
         <h2>Our bestselling chairs</h2>
         <div class="grid-3-cols">
           <figure class="chair">
-            <img src="/src/img/chair-1.jpg" alt="Chair" />
+            <img src="src/img/chair-1.jpg" alt="Chair" />
             <div class="chair-box">
               <h3>The Laid Back</h3>
               <ul class="chair-details">
@@ -110,7 +110,7 @@
           </figure>
 
           <figure class="chair">
-            <img src="/src/img/chair-2.jpg" alt="Chair" />
+            <img src="src/img/chair-2.jpg" alt="Chair" />
             <div class="chair-box">
               <h3>The Worker Bee</h3>
               <ul class="chair-details">
@@ -135,7 +135,7 @@
           </figure>
 
           <figure class="chair">
-            <img src="/src/img/chair-3.jpg" alt="Chair" />
+            <img src="src/img/chair-3.jpg" alt="Chair" />
             <div class="chair-box">
               <h3>The Chair 4/2</h3>
               <ul class="chair-details">
