--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
     <title>Furniture - Better chairs for better life.</title>
   </head>
@@ -13,10 +20,10 @@
       <nav>
         <img src="src/img/logo.png" class="logo" />
         <div class="nav-link">
-          <a href="#">Products</a>
-          <a href="#">Features</a>
-          <a href="#">Opinions</a>
-          <a href="#">Contact us</a>
+          <a href="#" class="website-link">Products</a>
+          <a href="#" class="website-link">Features</a>
+          <a href="#" class="website-link">Opinions</a>
+          <a href="#" class="contact-us">Contact us</a>
         </div>
       </nav>
       <header>
@@ -161,7 +168,7 @@
         </div>
       </section>
 
-      <footer>Copyright &copy; 2022</footer>
+      <footer>Copyright &copy; 2022 - ProDevDesign</footer>
     </div>
   </body>
 </html>
