--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
               xmlns="http://www.w3.org/2000/svg"
               class="features-icon"
               fill="none"
+              width="32"
+              height="32"
+              viewBox="0 0 24 24"
               stroke-width="2"
             >
               <path
@@ -67,6 +70,9 @@
               xmlns="http://www.w3.org/2000/svg"
               class="features-icon"
               fill="none"
+              width="32"
+              height="32"
+              viewBox="0 0 24 24"
               stroke-width="2"
             >
               <path
@@ -89,6 +95,9 @@
               xmlns="http://www.w3.org/2000/svg"
               class="features-icon"
               fill="none"
+              width="32"
+              height="32"
+              viewBox="0 0 24 24"
               stroke-width="2"
             >
               <path
