--- a/index.html
+++ b/index.html
@@ -357,6 +357,126 @@
         </div>
       </section>
 
+      <h2>FAQ</h2>
+      <div class="accordion">
+        <div class="item">
+          <p class="number">01</p>
+          <p class="text">Where are these chairs assembled?</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M19 9l-7 7-7-7"
+            />
+          </svg>
+          <div class="hidden-box">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+              ipsa molestias totam quas quisquam, esse culpa, consequatur quae
+              perferendis, similique non. Quasi consectetur placeat eos
+              reiciendis ad voluptatibus ex incidunt.
+            </p>
+            <ul>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+              <li>
+                Consequatur enim aliquam temporibus doloremque ex veritatis.
+              </li>
+              <li>
+                Assumenda corporis modi illum soluta odit velit tempore earum.
+              </li>
+              <li>
+                Quasi consectetur placeat eos reiciendis ad voluptatibus ex
+                incidunt.
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="item open">
+          <p class="number">02</p>
+          <p class="text">How long do I have to return my chair?</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M19 9l-7 7-7-7"
+            />
+          </svg>
+          <div class="hidden-box">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+              ipsa molestias totam quas quisquam, esse culpa, consequatur quae
+              perferendis, similique non. Quasi consectetur placeat eos
+              reiciendis ad voluptatibus ex incidunt.
+            </p>
+            <ul>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+              <li>
+                Consequatur enim aliquam temporibus doloremque ex veritatis.
+              </li>
+              <li>
+                Assumenda corporis modi illum soluta odit velit tempore earum.
+              </li>
+              <li>
+                Quasi consectetur placeat eos reiciendis ad voluptatibus ex
+                incidunt.
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="item">
+          <p class="number">03</p>
+          <p class="text">Do you ship to countries outside the EU?</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M19 9l-7 7-7-7"
+            />
+          </svg>
+          <div class="hidden-box">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
+              ipsa molestias totam quas quisquam, esse culpa, consequatur quae
+              perferendis, similique non. Quasi consectetur placeat eos
+              reiciendis ad voluptatibus ex incidunt.
+            </p>
+            <ul>
+              <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+              <li>
+                Consequatur enim aliquam temporibus doloremque ex veritatis.
+              </li>
+              <li>
+                Assumenda corporis modi illum soluta odit velit tempore earum.
+              </li>
+              <li>
+                Quasi consectetur placeat eos reiciendis ad voluptatibus ex
+                incidunt.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <footer>Copyright &copy; 2022 - ProDevDesign</footer>
     </div>
   </body>
