--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
           <a href="#" class="website-link">Products</a>
           <a href="#" class="website-link">Features</a>
           <a href="#" class="website-link">Opinions</a>
+          <a href="#" class="cart">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="cart-icon"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+              />
+            </svg>
+            Cart (0)</a
+          >
           <a href="#" class="contact-us">Contact us</a>
         </div>
       </nav>
@@ -356,6 +373,60 @@
           </figure>
         </div>
       </section>
+
+      <h2>Dimensions</h2>
+      <div class="table">
+        <table>
+          <thead>
+            <tr>
+              <!-- Table head -->
+              <th>Chair</th>
+              <th>The Laid Back</th>
+              <th>The Worker Bee</th>
+              <th>The Chair 4/2</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <!-- Table row -->
+            <tr>
+              <!-- Table head -->
+              <th>Width</th>
+              <!-- Table data -->
+              <td>80 cm</td>
+              <td>60 cm</td>
+              <td>220 cm</td>
+            </tr>
+
+            <tr>
+              <!-- Table head -->
+              <th>Height</th>
+              <!-- Table data -->
+              <td>100 cm</td>
+              <td>110 cm</td>
+              <td>90 cm</td>
+            </tr>
+
+            <tr>
+              <!-- Table head -->
+              <th>Depth</th>
+              <!-- Table data -->
+              <td>70 cm</td>
+              <td>65 cm</td>
+              <td>80 cm</td>
+            </tr>
+
+            <tr>
+              <!-- Table head -->
+              <th>Weight</th>
+              <!-- Table data -->
+              <td>16 kg</td>
+              <td>22 kg</td>
+              <td>80 kg</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
       <h2>FAQ</h2>
       <div class="accordion">
