--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         </div>
       </div>
 
-      <footer>Copyright &copy; 2022 - ProDevDesign</footer>
+      <footer>Copyright &copy; 2023 - Kacper Polarczyk</footer>
     </div>
   </body>
 </html>
